<resources>
    <string name="app_name">أنثروبولوجي</string>
    <string name="home">الرئيسية</string>
    <string name="title_about">تعريف</string>
    <string name="text">المحتوى</string>
    <string name="title">العنوان</string>
    <string name="title_article">مقالة</string>
    <string name="not_supported_language">لغة النطق غير معرفة</string>
    <string name="text_to_speech_initialization_failed">فشل تعريف ناطق الكلمات</string>
    <string name="title_concepts">مفاهيم</string>
    <string name="category">القسم</string>
    <string name="search">بحث</string>
    <string name="splash_text">احد تطبيقات علم الأنثروبولوجي</string>
    <string name="splash_sub_text">جامعة عين شمس / كلية البنات</string>
    <string name="about_app">عنوان الدراسة \n دور الطب الشرعي في إثبات جرائم العنف الخاصة بالمرأة في المجتمع المصري دراسة أنثروبولوجية \n مشروع التخرج اجتماع _ أنثروبولوجيا وفولكلور</string>
    <string name="title_pdf_view">عرض المشروع</string>
    <string name="about_anthropology">علم الأنثروبولوجيا (أو علم الإنسان) هو فرع من فروع العلوم الاجتماعية والعلوم الطبيعية يهتم بدراسة الإنسان وثقافاته. يهدف علم الأنثروبولوجيا إلى فهم تطور البشرية عبر التاريخ وتنوع الثقافات البشرية وتأثيرها على السلوك الإنساني.\n\nتشمل مجالات دراسة علم الأنثروبولوجيا عدة تخصصات، بما في ذلك:\n\nالأنثروبولوجيا البدنية: تركز على دراسة التطور البشري والتشريح البشري والوراثة والتنوع البشري البدني.\nالأنثروبولوجيا الثقافية: تركز على فهم الثقافات البشرية والتنوع الثقافي ونظم القيم والمعتقدات والتقاليد والتفاعلات الاجتماعية.\nالأنثروبولوجيا الاجتماعية: تركز على دراسة العلاقات الاجتماعية والتنظيم الاجتماعي والهوية الاجتماعية والاختلافات الاجتماعية.\nالأنثروبولوجيا التاريخية: تركز على دراسة التغيرات التاريخية في الثقافات البشرية والتطور الاجتماعي والاقتصادي والسياسي.\nتعتمد علم الأنثروبولوجيا على عدة أساليب بحثية، مثل البحث الميداني والملاحظة المباشرة والمقابلات الشخصية وتحليل الوثائق والمواد الأثرية. يسعى علم الأنثروبولوجيا إلى تطبيق مفهوم الثقافة والتنوع الثقافي في فهم الإنسان وتفسير سلوكه وتفاعلاته الاجتماعية.</string>
</resources>