<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_article_dashboard"
        android:icon="@drawable/story_article"
        android:iconTint="?attr/colorPrimaryVariant"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_concept"
        android:icon="@drawable/concepts"
        android:iconTint="?attr/colorPrimaryVariant"
        android:title="@string/title_concepts" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_info_24"
        android:title="@string/title_about" />

    <item
        android:id="@+id/navigation_pdf_view"
        android:icon="@drawable/ic_book_24"
        android:title="@string/title_pdf_view" />

</menu>