<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.article.ArticleFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/header_cardview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_padding">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/faculty_image_cardview"
                        android:layout_width="320dp"
                        android:layout_height="150dp"
                        android:visibility="visible"
                        app:cardCornerRadius="30dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/faculty_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/style_bordered"
                            android:backgroundTint="@color/cardview_light_background"
                            android:scaleType="fitXY"
                            android:src="@drawable/faculty_logo" />
                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/pdf_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/droid_kuffi_bold"
                        android:text="@string/title_pdf_view"
                        app:layout_constraintEnd_toEndOf="@id/faculty_image_cardview"
                        app:layout_constraintStart_toStartOf="@id/faculty_image_cardview"
                        app:layout_constraintTop_toBottomOf="@id/faculty_image_cardview" />
                    <!--https://drive.google.com/file/d/1f8XLU1IhHCxTWjO4wNwPXPM6XSy_ok4c/view?usp=sharing-->


                    <TextView
                        android:id="@+id/about_anthropology_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/activity_vertical_margin"
                        android:layout_marginStart="@dimen/item_horizontal_margin"
                        android:fontFamily="@font/droid_kuffi"
                        android:gravity="start"
                        android:paddingStart="@dimen/item_horizontal_padding"
                        android:paddingTop="@dimen/item_vertical_padding"
                        android:paddingEnd="@dimen/item_horizontal_padding"
                        android:paddingBottom="@dimen/item_vertical_padding"
                        android:text="@string/about_anthropology"
                        android:textSize="@dimen/text_size_small"
                        android:textStyle="normal"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/pdf_url" />

                    <TextView
                        android:id="@+id/about_app_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/item_horizontal_margin"
                        android:layout_marginVertical="@dimen/activity_vertical_margin"
                        android:fontFamily="@font/droid_kuffi"
                        android:gravity="start"
                        android:paddingStart="@dimen/item_horizontal_padding"
                        android:paddingTop="@dimen/item_vertical_padding"
                        android:paddingEnd="@dimen/item_horizontal_padding"
                        android:paddingBottom="@dimen/item_vertical_padding"
                        android:text="@string/about_app"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/about_anthropology_tv" />

                    <TextView
                        android:id="@+id/supervision_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/item_vertical_margin"
                        android:fontFamily="@font/droid_kuffi_bold"
                        android:gravity="center"
                        android:paddingStart="@dimen/item_horizontal_padding"
                        android:paddingEnd="@dimen/item_horizontal_padding"
                        android:textColorHint="@color/cardview_dark_background"
                        android:textSize="@dimen/text_size_medium"
                        app:layout_constraintEnd_toEndOf="@+id/about_app_tv"
                        app:layout_constraintStart_toStartOf="@+id/about_app_tv"
                        app:layout_constraintTop_toBottomOf="@id/about_app_tv" />
                    <TextView
                        android:id="@+id/names_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/droid_kuffi"
                        android:gravity="start"
                        android:layout_marginTop="@dimen/item_vertical_margin"
                        android:paddingStart="@dimen/item_horizontal_padding"
                        android:paddingEnd="@dimen/item_horizontal_padding"
                        android:textColorHint="@color/cardview_dark_background"
                        android:textSize="@dimen/text_size_small"
                        app:layout_constraintEnd_toEndOf="@+id/supervision_tv"
                        app:layout_constraintStart_toStartOf="@+id/supervision_tv"
                        app:layout_constraintTop_toBottomOf="@id/supervision_tv" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>